appId: ${APP_ID}
---
# Onboarding flow
- tapOn: "Enter Your Name"
- inputText: "Shadow"
- tapOn: "Get Started"

# Change language
- assertVisible: "Hindi"
- tapOn: "Hindi"
- tapOn: "English"
- tapOn: "Hindi"
- tapOn: "Ok"

# Change country
- assertVisible: "India"
- tapOn: "India"
- scrollUntilVisible:
    element: "USA"
    direction: DOWN
    timeout: 50000
- tapOn: "USA"
- assertVisible: "USA"
- tapOn: "Finish"

- takeScreenshot: "onboarding-screen"